# nuck

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  architecture.md  flake.nix  justfile
include/: nuck.hpp.bak
include/nuck/: math.hpp  object.hpp  world.hpp
src/: nuck.cpp.bak  world.cpp
